Fix incorrect annotation on DELETE /device/{id} and regen api docs
